--- a/SeleniumLecture/test-output/old/Default suite/methods-alphabetical.html
+++ b/SeleniumLecture/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,26 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="87b1af">  <td>25/06/17 15:10:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG_TestCase2.validateTitle()[pri:0, instance:Lecture8.TestNG_TestCase2@757277dc]">validateTitle</td> 
-  <td>main@1151844284</td>   <td></td> </tr>
+<tr bgcolor="c2a9ac">  <td>25/07/11 10:56:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestExtentReports.DoLogin()[pri:0, instance:Lecture8.TestExtentReports@fa36558]">DoLogin</td> 
+  <td>main@373928166</td>   <td></td> </tr>
+<tr bgcolor="c2a9ac">  <td>25/07/11 10:56:55</td>   <td>21</td> <td>&nbsp;</td><td title="&lt;&lt;TestExtentReports.EndSetUp()[pri:0, instance:Lecture8.TestExtentReports@fa36558]">&lt;&lt;EndSetUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@373928166</td>   <td></td> </tr>
+<tr bgcolor="c2a9ac">  <td>25/07/11 10:56:55</td>   <td>-190</td> <td>&nbsp;</td><td title="&gt;&gt;TestExtentReports.SetUpReport()[pri:0, instance:Lecture8.TestExtentReports@fa36558]">&gt;&gt;SetUpReport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@373928166</td>   <td></td> </tr>
+<tr bgcolor="c2a9ac">  <td>25/07/11 10:56:55</td>   <td>10</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestExtentReports.UpdateResult(org.testng.ITestResult)[pri:0, instance:Lecture8.TestExtentReports@fa36558]">&lt;&lt;UpdateResult</td> 
+<td>&nbsp;</td>  <td>main@373928166</td>   <td></td> </tr>
+<tr bgcolor="c2a9ac">  <td>25/07/11 10:56:55</td>   <td>18</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestExtentReports.UpdateResult(org.testng.ITestResult)[pri:0, instance:Lecture8.TestExtentReports@fa36558]">&lt;&lt;UpdateResult</td> 
+<td>&nbsp;</td>  <td>main@373928166</td>   <td></td> </tr>
+<tr bgcolor="c2a9ac">  <td>25/07/11 10:56:55</td>   <td>20</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestExtentReports.UpdateResult(org.testng.ITestResult)[pri:0, instance:Lecture8.TestExtentReports@fa36558]">&lt;&lt;UpdateResult</td> 
+<td>&nbsp;</td>  <td>main@373928166</td>   <td></td> </tr>
+<tr bgcolor="c2a9ac">  <td>25/07/11 10:56:55</td>   <td>16</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestExtentReports.UserRegistration()[pri:0, instance:Lecture8.TestExtentReports@fa36558]">UserRegistration</td> 
+  <td>main@373928166</td>   <td></td> </tr>
+<tr bgcolor="c2a9ac">  <td>25/07/11 10:56:55</td>   <td>18</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestExtentReports.ValidateTitle()[pri:0, instance:Lecture8.TestExtentReports@fa36558]">ValidateTitle</td> 
+  <td>main@373928166</td>   <td></td> </tr>
+<tr bgcolor="c2a9ac">  <td>25/07/11 10:56:55</td>   <td>-2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestExtentReports.beforeTest(org.testng.ITestResult)[pri:0, instance:Lecture8.TestExtentReports@fa36558]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td>  <td>main@373928166</td>   <td></td> </tr>
+<tr bgcolor="c2a9ac">  <td>25/07/11 10:56:55</td>   <td>16</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestExtentReports.beforeTest(org.testng.ITestResult)[pri:0, instance:Lecture8.TestExtentReports@fa36558]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td>  <td>main@373928166</td>   <td></td> </tr>
+<tr bgcolor="c2a9ac">  <td>25/07/11 10:56:55</td>   <td>18</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestExtentReports.beforeTest(org.testng.ITestResult)[pri:0, instance:Lecture8.TestExtentReports@fa36558]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td>  <td>main@373928166</td>   <td></td> </tr>
 </table>
